logo modified: both page logo and tab logo

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -18,6 +18,11 @@
   margin-left: 15px;
 }
 
+/* .title img{
+  height: 70px;
+  margin: 5px;
+} */
+
 .page-language {
   float: right;
   margin-right: 100px;
