--- a/src/styles/SidebarInfo.css
+++ b/src/styles/SidebarInfo.css
@@ -67,19 +67,21 @@ div#microphoneIcon {
 
 .dictationOn {
   height: 25px;
+  width: 100%;
   line-height: 25px;
   background: rgba(0,0,0,0.4);
   color: #fff;
   text-align: center;
   margin: 2px;
-  padding: 1px;
+  padding: 1px 0;
 }
 
 .dictationText {
   background: rgba(0,0,0,0.4);
   color: #fff;
-  margin: 1px;
+  margin: 2px;
   height: 100px;
+  width: 100%;
   border-radius: 0 0 10px 10px;
-  padding: 3px 5px;
+
 }
