--- a/src/styles/SidebarInfo.css
+++ b/src/styles/SidebarInfo.css
@@ -47,10 +47,12 @@ div#microphoneIcon {
   flex-direction: column;
   justify-content: center;
   margin-right: 15px;
+  margin-top:10px;
   width: 120px;
 }
 
 .lang-select select{
+  margin-top: 2px;
   height: 23px;
 }
 
@@ -58,6 +60,7 @@ div#microphoneIcon {
   margin: -5px auto 5px;
   color: #fff;
   font-weight: 400;
+  font-size: 16px;
 }
 
 .dictationInfo {
